--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lingmo-settings (3.0.0~rc7) helium; urgency=high
+
+  [lingmo]
+  * Update Version
+
+ -- Lingmo OS Team <team@lingmo.org>  Fri, 17 Jan 2025 22:00:00 +0800
+
 lingmo-settings (3.0.0~rc6) helium; urgency=high
 
   [lingmo]
